Create Organigram component

--- a/organigram/src/styles.css
+++ b/organigram/src/styles.css
@@ -2,7 +2,8 @@
 
 .test {
   display: inline-block;
-  margin: 2em auto;
+  margin: 2em;
+  padding: 1em;
   border: 2px solid #000;
   font-size: 2em;
 }
